Task number two

--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,11 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>Já jsem html soubor a právě jsi mě zobrazil</h1>
+    <nav>
+      <h1>VueXpress app</h1>
+      <ul>
+        <li><a href="./form.html">Go to form page</a></li>
+      </ul>
+    </nav>
   </body>
 </html>
