--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,11 @@
     <nav>
       <h1>VueXpress app</h1>
       <ul>
+        <li><a href="./composition.html">Go to composition page</a></li>
+        <li><a href="./conloop.html">Go to conloop page</a></li>
+        <li><a href="./input.html">Go to input page</a></li>
+        <li><a href="./rendering.html">Go to rendering page</a></li>
+        <li><a href="./vue.html">Go to testing vue page</a></li>
         <li><a href="./form.html">Go to form page</a></li>
       </ul>
     </nav>
