update index html

--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
         <li><a href="./conloop.html">Go to conloop page</a></li>
         <li><a href="./input.html">Go to input page</a></li>
         <li><a href="./rendering.html">Go to rendering page</a></li>
-        <li><a href="./vue.html">Go to testing vue page</a></li>
+        <li><a href="./vue.html">Go to basic Vue page</a></li>
         <li><a href="./form.html">Go to form page</a></li>
       </ul>
     </nav>
