--- a/public/composition.html
+++ b/public/composition.html
@@ -8,6 +8,7 @@
     <title>Document</title>
   </head>
   <body>
+    <a href="./index.html">Back to homepage</a>
     <div id="app6">
       <todo-item v-for="item in todos" v-bind:todo="item.text"> </todo-item>
     </div>
