--- a/public/conloop.html
+++ b/public/conloop.html
@@ -8,6 +8,7 @@
     <title>Document</title>
   </head>
   <body>
+    <a href="./index.html">Back to homepage</a>
     <div id="app3">
       <span v-if="seen"
         >Span zobrazený jen pokud je viditelnost nastavená na true</span
