--- a/public/form.html
+++ b/public/form.html
@@ -17,7 +17,7 @@
         color: red;
       }
     </style>
-
+    <a href="./index.html">Back to homepage</a>
     <div id="appForm">
       <h1>This is registration to extraordinary squad.</h1>
       <form @submit.prevent="checkForm" method="POST">
