--- a/public/rendering.html
+++ b/public/rendering.html
@@ -8,6 +8,7 @@
     <title>My first app</title>
   </head>
   <body>
+    <a href="./index.html">Back to homepage</a>
     <div id="app2">
       <span v-bind:title="message">
         Hover on me, you'll se title over me
