--- a/public/vue.html
+++ b/public/vue.html
@@ -8,6 +8,7 @@
     <title>My first app</title>
   </head>
   <body>
+    <a href="./index.html">Back to homepage</a>
     <div id="app">
       {{ message }}
     </div>
