--- a/public/input.html
+++ b/public/input.html
@@ -8,6 +8,7 @@
     <title>Document</title>
   </head>
   <body>
+    <a href="./index.html">Back to homepage</a>
     <div id="app5">
       <p>{{ message }}</p>
 
